@@ -30,6 +30,7 @@ Changes in 4.2:
 - Add force start option (213504)
 - Add torrent search bar for view (269279)
 - Make it possible to hide uploads, downloads and not queued torrents in the queue manager (253779, 251861, 210064)
+- Merge status and name column into one column and use icons to show the status (272160, 228564)
 
 Changes in 4.1.3:
 - Fix statusbar hiding and showing not working (281674)
